# MyFFmpegTest

./: LICENSE  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/leosun/myffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  codec_desc.h  codec_id.h  d3d11va.h  dxva2.h  packet.h  qsv.h  vaapi.h  vdpau.h  videotoolbox.h  xvmc.h
app/src/main/cpp/include/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/include/libavutil/: avstring.h  avutil.h  camellia.h  cast5.h  cpu.h  ffversion.h  frame.h  hash.h  hwcontext.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  mem.h  murmur3.h  opt.h  pixdesc.h  samplefmt.h  tea.h  twofish.h  version.h  xtea.h
app/src/main/cpp/include/libswresample/: swresample.h  version.h
app/src/main/cpp/include/libswscale/: swscale.h
app/src/main/java/com/leosun/myffmpegtest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/leosun/myffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
